@@ -1,3 +1,4 @@
+{namespace krexx=Tx_Includekrexx_ViewHelpers}
 <f:be.container>
 <style type="text/css">
 /* since addJsFile and addCssFile got removed, I have to resort to adding stuff inline! */
@@ -120,6 +121,11 @@ td.cbx {
     </div>
     <div id="typo3-docbody">
       <div id="typo3-inner-docbody">
+        <!--
+          Our "own" version of the FlashMessagesViewhelper, to provide backend
+          messages from 4.5 to 8.0
+        -->
+        <krexx:messages/>
         <f:render section="main" />
       </div>
     </div>
